development - contninue update Sonar fixes, also refactor RabbitMQ publish